# nss_redis

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  nss_redis.c  nss_redis.h  nss_redis_getgrgid.c  nss_redis_getgrnam.c  nss_redis_getpwnam.c  nss_redis_getpwuid.c  nss_redis_utils.c  nss_redis_utils.h
t/: 01-getpwnam.t  02-getpwuid.t  03-getgrnam.t  04-getgrgid.t  10-nss_redis_config.c  10-nss_redis_config.t  10-passwd.c  10-passwd.t  11-group.c  11-group.t  20-getpwnam_r.c  20-getpwnam_r.t  21-getpwuid_r.c  21-getpwuid_r.t  22-getgrnam_r.c  22-getgrnam_r.t  23-getgrgid_r.c  23-getgrgid_r.t  Makefile.am  Makefile.in  nss_redis.pm  test_redis_pthread.h
